<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_registration"
    tools:context="com.arifultonu.businesslink.RegistrationActivity">



    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fullName"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:width="320dp"
        android:text="@string/fullName"
        android:inputType="text" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/companyName"
        android:layout_below="@+id/fullName"
        android:layout_centerHorizontal="true"
        android:width="320dp"
        android:text="@string/companyName"
        android:inputType="text" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/designation"
        android:width="320dp"
        android:text="@string/designation"
        android:layout_below="@+id/companyName"
        android:layout_centerHorizontal="true"
        android:inputType="text" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/companyType"
        android:width="320dp"
        android:text="@string/companyType"
        android:inputType="text"
        android:layout_below="@+id/designation"
        android:layout_alignLeft="@+id/designation"
        android:layout_alignStart="@+id/designation" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/companyAddress"
        android:width="320dp"
        android:text="@string/companyLocation"
        android:inputType="text"
        android:layout_below="@+id/companyType"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/webAddress"
        android:width="320dp"
        android:text="@string/registrationActivity"
        android:inputType="text"
        android:layout_below="@+id/companyAddress"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/emailAddress"
        android:layout_below="@+id/webAddress"
        android:layout_centerHorizontal="true"
        android:width="320dp"
        android:text="@string/emailAddress" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/skype"
        android:width="320dp"
        android:text="@string/skype"
        android:inputType="text"
        android:layout_below="@+id/emailAddress"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/password"
        android:width="320dp"
        android:text="Password"
        android:layout_below="@+id/about"
        android:layout_alignLeft="@+id/skype" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/about"
        android:width="320dp"
        android:text="About"
        android:layout_below="@+id/skype"
        android:layout_alignLeft="@+id/skype"
        android:layout_alignStart="@+id/skype" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Submit"
        android:id="@+id/btnSubmit"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
